--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -97,6 +97,6 @@ jobs:
       - name: Upload Dev Debug artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: '1:418167375742:android:f26868d0619266f7f0952f'
+          appId: 1:418167375742:android:f26868d0619266f7f0952f
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           file: android-project/${{ env.main_project_module }}/build/outputs/apk/dev/debug/app-dev-debug.apk
