--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -71,14 +71,14 @@ jobs:
 
       # Upload Artifact Build
       # Noted For Output [main_project_module]/build/outputs/apk/dev/debug/
-      - name: Upload APK Debug - ${{ env.repository_name }}
+      - name: Upload APK Dev Debug - ${{ env.repository_name }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) debug generated
           path: android-project/${{ env.main_project_module }}/build/outputs/apk/dev/debug/
 
       # Noted For Output [main_project_module]/build/outputs/apk/dev/release/
-      # - name: Upload APK Release - ${{ env.repository_name }}
+      - name: Upload APK Dev Release - ${{ env.repository_name }}
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) release generated
